Fixed details alignment on home page

--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -123,6 +123,7 @@ body,
 
 .gig > li .details {
     position: absolute;
+    top: 0px;
     left: 70px;
 }
 
